potential fix of text clipping

--- a/main.css
+++ b/main.css
@@ -106,7 +106,7 @@ body
 {
 	z-index: 1;
 	position: absolute;
-	height: 75%;	/*set relative pctire size*/
+	height: 70%;	/*set relative picture size*/
 	
 	top: 50%;
 	left: 50%;
@@ -118,18 +118,20 @@ body
 	max-width:100%;
 	max-height:100%;
 	margin: -50% 0 0 -50%;
+	
+	//border:1px solid #808080;
 }
 
 .site_title
 {
 	z-index: 1;
 	position: absolute;
-	height: 80%;	/*set relative pctire size*/
+	height: 80%;
 	width: 80%;
 	
 	margin: auto;
 	
-	top: 7%;
+	top: 10%;
 	left: 10%;
 }
 
